<resources>
    <string name="app_name">Virtual Cards Sample</string>
    <string name="virtual_cards">Virtual Cards</string>
    <string name="secure_id_verification">Secure ID Verification</string>
    <string name="funding_sources">Funding Sources</string>
    <string name="sudos">Sudos</string>
    <string name="orphan_virtual_cards">Orphan Virtual Cards</string>
    <string name="learn_more">Learn More</string>
    <string name="validate_fields">Please ensure all required fields are filled out.</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="enter_optional_input">Enter %1$s (Optional)</string>
    <string name="enter_non_optional_input">Enter %1$s</string>
    <string name="sample_app">Sample App</string>
    <string name="secure_id_verification_consent">Secure ID Verification Consent</string>
    <string name="registration_method">Registration Method</string>
    <string name="register_login">Register / Login</string>
    <string name="register_failure">Failed to register: %1$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="signin_failure">Failed to Sign In: %1$s</string>
    <string name="registration_keys_failure">Failed to load TEST registration keys: %1$s</string>
    <string name="test_registration">TEST Registration</string>
    <string name="federated_signin">Federated SignIn</string>
    <string name="reset">Reset</string>
    <string name="virtual_card_doc_url" translatable="false">https://docs.sudoplatform.com/guides/virtual-cards</string>
    <string name="deregister">Deregister</string>
    <string name="deregister_confirmation">Are you sure you want to deregister? All Sudos, funding sources, virtual cards and associated data will be deleted.</string>
    <string name="deregistering">Deregistering&#8230;</string>
    <string name="deregister_failure">Unable to deregister: %1$s</string>
    <string name="what_is_a_virtual_card">What is a Virtual Card?</string>
    <string name="virtual_card_explanation">Virtual Cards must belong to a Sudo. Before a virtual card can be created, a user\'s identity needs to be verified and a funding source needs to be created.</string>
    <string name="loading_sudos">Loading Sudos</string>
    <string name="deleting_sudos">Deleting Sudos&#8230;</string>
    <string name="activity_sudos">Sudos</string>
    <string name="list_sudos_failure">Failed to list Sudos</string>
    <string name="delete_sudo_failure">Failed to delete Sudo</string>
    <string name="what_is_a_sudo">What is a Sudo?</string>
    <string name="sudo_explanation">Virtual Cards must belong to a Sudo. A Sudo is a digital identity created and owned by a real person</string>
    <string name="sudo_doc_url" translatable="false">https://docs.sudoplatform.com/concepts/sudo-digital-identities</string>
    <string name="try_again">Try Again</string>
    <string name="create_sudo_button">+ Create Sudo</string>
    <string name="create_sudo">Create Sudo</string>
    <string name="enter_sudo_name">Enter a name for your Sudo</string>
    <string name="success">Success</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="enter_sudo_label">Enter Sudo Label</string>
    <string name="choose_label_detail">Choose any label you would like for your Sudo: Shopping, Dating, etc.</string>
    <string name="creating_sudo">Creating Sudo&#8230;</string>
    <string name="create_sudo_learn_more">Virtual cards must belong to a Sudo. A Sudo is a digital identity created and owned by a real person.</string>
    <string name="create_sudo_doc_url" translatable="false">https://docs.sudoplatform.com/guides/sudos</string>
    <string name="verifying_identity">Verifying identity&#8230;</string>
    <string name="verification_complete">Verification complete!</string>
    <string name="verification_failed">Failed to verify identity</string>
    <string name="identity_verified">Identity verified</string>
    <string name="identity_not_verified">Identity not verified</string>
    <string name="status">Status</string>
    <string name="checking_status">Checking status&#8230;</string>
    <string name="identity_verification_doc_url" translatable="false">https://docs.sudoplatform.com/guides/identity-verification</string>
    <string name="identity_verification_learn_more">Secure identity verification is required in order to ensure legitimate use of the Sudo Platform virtual cards service. \n\n Identity verification must be performed successfully once for each user. \n\n The default identity information in this form will verify successfully in the sandbox environment.</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not verified</string>
    <string name="unknown">Unknown</string>
    <string name="identity_verification_consent_learn_more">ID verification consent management allows you to control how your identity verification data is used and stored. You can review and update your consent preferences at any time.</string>
    <string name="consent_requirement_status">Consent Requirement Status</string>
    <string name="checking_consent_requirement">Checking if consent is required...</string>
    <string name="consent_required">Consent is required in this environment</string>
    <string name="consent_not_required">Consent is not required in this environment</string>
    <string name="consent_requirement_error">Error checking consent requirement</string>
    <string name="consent_requirement_unknown_error">Unknown error occurred</string>
    <string name="consent_text_label">Identity Data Processing Consent</string>
    <string name="retrieve_consent_text">Retrieve Consent Text</string>
    <string name="retrieving_consent_text">Retrieving consent text...</string>
    <string name="consent_text_error">Error retrieving consent text</string>
    <string name="consent_text_api_error">Error calling consent API: %1$s</string>
    <string name="provide_consent">Provide Consent</string>
    <string name="providing_consent">Providing consent...</string>
    <string name="consent_retrieve_first_error">Please retrieve consent text first before providing consent</string>
    <string name="consent_provided_success">Consent provided successfully</string>
    <string name="consent_provided_success_message">Your consent has been successfully provided</string>
    <string name="consent_provide_error">Error providing consent</string>
    <string name="consent_provide_unknown_error">Unknown error occurred while providing consent</string>
    <string name="consent_provide_api_error">Error providing consent: %1$s</string>
    <string name="withdraw_consent">Withdraw Consent</string>
    <string name="withdrawing_consent">Withdrawing consent...</string>
    <string name="consent_withdrawn_success">Consent withdrawn successfully</string>
    <string name="consent_withdrawn_success_message">Your consent has been successfully withdrawn</string>
    <string name="consent_withdraw_error">Error withdrawing consent</string>
    <string name="consent_withdraw_unknown_error">Unknown error occurred while withdrawing consent</string>
    <string name="consent_withdraw_api_error">Error withdrawing consent: %1$s</string>
    <string name="consent_granted">Consent provided</string>
    <string name="consent_not_granted">Consent not provided</string>
    <string name="consent_status_error">Error retrieving consent status</string>
    <string name="consent_status">Consent Status</string>
    <string name="consent_status_placeholder">Current consent status will be displayed here</string>
    <string name="loading_funding_sources">Loading Funding Sources</string>
    <string name="create_funding_source_button">+ Create Funding Source</string>
    <string name="cancelling_funding_source">Cancelling funding source&#8230;</string>
    <string name="reviewing_funding_source">Requesting review of funding source&#8230;</string>
    <string name="list_funding_sources_failure">Failed to list funding sources</string>
    <string name="cancel_funding_source_failure">Failed to cancel funding source</string>
    <string name="review_funding_source_failure">Failed to review funding source</string>
    <string name="what_is_a_funding_source">What is a Funding Source?</string>
    <string name="funding_source_credit_card_label">Card: %1$s</string>
    <string name="funding_source_credit_card_description">&#8226;&#8226;&#8226;&#8226;%1$s (%2$s)</string>
    <string name="funding_source_bank_account_label">Bank Account: %1$s</string>
    <string name="funding_source_bank_account_description">&#8226;&#8226;&#8226;&#8226;%1$s (%2$s) %3$s</string>
    <string name="funding_source_credit_card_cancelled_label">Card: %1$s - Cancelled</string>
    <string name="funding_source_bank_account_cancelled_label">Bank Account: %1$s - Cancelled</string>
    <string name="refresh">Refresh</string>
    <string name="create_funding_source">Create Funding Source</string>
    <string name="create_stripe_card">Add Stripe Credit Card</string>
    <string name="create_checkout_bank_account">Add Checkout Bank Account</string>
    <string name="create_funding_source_learn_more">A Funding source is required to link a real credit card, debit card or bank account to a virtual card. This funding source is used to fund a transaction performed on the virtual card.</string>
    <string name="create_funding_source_doc_url" translatable="false">https://docs.sudoplatform.com/guides/virtual-cards/manage-funding-sources#creating-a-funding-source</string>
    <string name="create_stripe_funding_source">Create Stripe Funding Source</string>
    <string name="creating_funding_source">Creating funding source&#8230;</string>
    <string name="create_funding_source_failure">Failed to create funding source</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="launching_plaid_link">Launching Plaid Link&#8230;</string>
    <string name="plaid_link_explanation">Launch Plaid Link to connect a bank account</string>
    <string name="launch_plaid_link">Launch Plaid Link</string>
    <string name="plaid_link_error">Plaid Link encountered and error</string>
    <string name="institution">Institution:</string>
    <string name="account_type">Account type:</string>
    <string name="account_name">Account name:</string>
    <string name="account_number_ending">Account number ending:</string>
    <string name="account_number_ending_label">&#8226;&#8226;&#8226;&#8226;%1$s</string>
    <string name="agreement_text_confirmation">By checking this box you agree to the terms of the ACH Authorization Agreement above.</string>
    <string name="refresh_bank_account">Refresh Bank Account</string>
    <string name="refreshing_funding_source">Refreshing funding source&#8230;</string>
    <string name="plaid_link_refresh_explanation">Launch Plaid Link to refresh a bank account</string>
    <string name="loading_virtual_cards">Loading Virtual Cards</string>
    <string name="create_virtual_card_button">+ Create Virtual Card</string>
    <string name="cancelling_virtual_card">Cancelling virtual card&#8230;</string>
    <string name="creating_virtual_card">Creating virtual card&#8230;</string>
    <string name="list_virtual_cards_failure">Failed to list virtual cards</string>
    <string name="cancel_virtual_card_failure">Failed to cancel virtual card</string>
    <string name="description_placeholder">Description</string>
    <string name="date_placeholder">Date</string>
    <string name="amount_placeholder">Amount</string>
    <string name="fee_placeholder">Fee</string>
    <string name="funding_source_name">Funding Source Name</string>
    <string name="field_title">Field Title</string>
    <string name="field_subtitle">Field Subtitle</string>
    <string name="field_value">Field Value</string>
    <string name="placeholder">-</string>
</resources>