<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="@android:color/white"
    android:layout_marginBottom="2dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/labels"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:lines="1"
            android:text="@string/description_placeholder"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:lines="1"
            android:text="@string/date_placeholder"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/amounts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/amountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:lines="1"
            android:text="@string/amount_placeholder"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/feeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="35dp"
            android:layout_alignParentEnd="true"
            android:lines="1"
            android:text="@string/fee_placeholder"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
