<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".sudos.CreateSudoFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:hint="@string/enter_sudo_label"
        android:inputType="textCapWords"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/choose_label_detail"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="12dp">

        <TextView
            android:id="@+id/learnMoreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/create_sudo_learn_more"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/learnMoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="55dp"
            android:background="@color/colorBackground"
            android:gravity="center|start"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/learn_more"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>