<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginBottom="2dp"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:scrollbarAlwaysDrawHorizontalTrack="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:srcCompat="@drawable/ic_credit_card_32px" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/funding_source_name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:lines="1"
        android:text="@string/description_placeholder"
        android:textSize="14sp" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:height="55dp"
        android:background="#FFFFFF"
        android:drawableTint="#FFFFFF"
        android:text="@string/refresh"
        android:textColor="@color/colorPrimary"
        android:visibility="visible" />

</RelativeLayout>
