<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@android:color/white"
    android:layout_marginBottom="2dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/labels"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/field_title"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subtitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:lines="1"
            android:text="@string/field_subtitle"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/values"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/valueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:lines="1"
            android:text="@string/field_value"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
