<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".fundingsources.CreateFundingSourceMenuFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <Button
            android:id="@+id/createStripeCardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="55dp"
            android:background="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:gravity="center|start"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/create_stripe_card"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/createCheckoutBankAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="55dp"
            android:background="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:gravity="center|start"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/create_checkout_bank_account"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/learnMoreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/create_funding_source_learn_more"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/learnMoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="55dp"
                android:background="@color/colorBackground"
                android:gravity="center|start"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/learn_more"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
